--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -12,6 +12,7 @@ loginservice.host=login-service
 loginservice.initUrl=/auth/init
 loginservice.midInitUrl=/auth/mid/init
 loginservice.midPollUrl=/auth/mid/poll
+loginservice.midCancelUrl=/auth/mid/poll/cancel
 loginservice.authAcceptUrl=/auth/accept
 loginservice.consentUrl=/consent
 
