TARA2-83 heartbeat test added

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -15,6 +15,7 @@ loginservice.midPollUrl=/auth/mid/poll
 loginservice.midCancelUrl=/auth/mid/poll/cancel
 loginservice.authAcceptUrl=/auth/accept
 loginservice.consentUrl=/consent
+loginservice.heartbeatUrl=/heartbeat
 
 # oidc client
 oidcclient.protocol=https
