TARA2-75 legal person init tests added

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -14,6 +14,11 @@ loginservice.midInitUrl=/auth/mid/init
 loginservice.midPollUrl=/auth/mid/poll
 loginservice.midCancelUrl=/auth/mid/poll/cancel
 loginservice.authAcceptUrl=/auth/accept
+## legal person
+loginservice.authLegalInitUrl=/auth/legalperson/init
+loginservice.authLegalPersonUrl=/auth/legalperson
+loginservice.authLegalConfirmUrl=/auth/legalperson/confirm
+
 loginservice.consentUrl=/consent
 loginservice.heartbeatUrl=/heartbeat
 
