TARA2-82 TARA2-104 session tests added

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -14,6 +14,7 @@ loginservice.midInitUrl=/auth/mid/init
 loginservice.midPollUrl=/auth/mid/poll
 loginservice.midCancelUrl=/auth/mid/poll/cancel
 loginservice.authAcceptUrl=/auth/accept
+loginservice.authRejectUrl=/auth/reject
 ## legal person
 loginservice.authLegalInitUrl=/auth/legalperson/init
 loginservice.authLegalPersonUrl=/auth/legalperson
