TARA2-76 auth consent tests added

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -20,7 +20,8 @@ loginservice.authLegalInitUrl=/auth/legalperson/init
 loginservice.authLegalPersonUrl=/auth/legalperson
 loginservice.authLegalConfirmUrl=/auth/legalperson/confirm
 
-loginservice.consentUrl=/consent
+loginservice.consentUrl=/auth/consent
+loginservice.consentConfirmUrl=/auth/consent/confirm
 loginservice.heartbeatUrl=/heartbeat
 
 # oidc client
