--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -13,6 +13,7 @@ loginservice.initUrl=/auth/init
 loginservice.midInitUrl=/auth/mid/init
 loginservice.midPollUrl=/auth/mid/poll
 loginservice.midCancelUrl=/auth/mid/poll/cancel
+loginservice.idCardInitUrl=/auth/id
 loginservice.authAcceptUrl=/auth/accept
 loginservice.authRejectUrl=/auth/reject
 ## legal person
