TARA2-73 first openid tests added

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -3,7 +3,8 @@ oidcservice.protocol=https
 oidcservice.host=oidc-service
 oidcservice.port=8443
 oidcservice.authenticationRequestUrl=/oauth2/auth
-
+oidcservice.configurationUrl=/.well-known/openid-configuration
+oidcservice.jwksUrl=/.well-known/jwks.json
 
 # login service configuration
 loginservice.protocol=https
