TARA2-73 openid tests updated

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -33,3 +33,4 @@ oidcclient.port=8451
 oidcclient.responseUrl=/oauth/response
 oidcclient.requestUrl=/oauth/request
 oidcclient.clientId=dev-local-specificproxyservice
+oidcclient.secret=secret
