TARA2-85 ID-card tests improved

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -8,8 +8,8 @@ oidcservice.jwksUrl=/.well-known/jwks.json
 
 # login service configuration
 loginservice.protocol=https
-loginservice.host=login-service
-# loginservice.port=
+loginservice.host=login-service-backend
+loginservice.port=8444
 loginservice.initUrl=/auth/init
 loginservice.midInitUrl=/auth/mid/init
 loginservice.midPollUrl=/auth/mid/poll
