--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -10,6 +10,11 @@ oidcservice.jwksUrl=/.well-known/jwks.json
 loginservice.protocol=https
 loginservice.host=login-service-backend
 loginservice.port=8444
+# login service configuration for specific node, used in ID-Card tests
+loginservice.node.protocol=https
+loginservice.node.host=login-service-backend
+loginservice.node.port=8444
+# general endpoints
 loginservice.initUrl=/auth/init
 loginservice.midInitUrl=/auth/mid/init
 loginservice.midPollUrl=/auth/mid/poll
@@ -17,16 +22,17 @@ loginservice.midCancelUrl=/auth/mid/poll/cancel
 loginservice.idCardInitUrl=/auth/id
 loginservice.authAcceptUrl=/auth/accept
 loginservice.authRejectUrl=/auth/reject
+loginservice.errorUrl=/oidc-error
 ## legal person
 loginservice.authLegalInitUrl=/auth/legalperson/init
 loginservice.authLegalPersonUrl=/auth/legalperson
 loginservice.authLegalConfirmUrl=/auth/legalperson/confirm
-
+# consent endpoints
 loginservice.consentUrl=/auth/consent
 loginservice.consentConfirmUrl=/auth/consent/confirm
 loginservice.heartbeatUrl=/heartbeat
 
-# oidc client
+# OIDC mock parameters for tests (tests use OIDC mock values)
 oidcclient.protocol=https
 oidcclient.host=oidc-client-mock
 oidcclient.port=8451
