TARA2-117 smart-ID tests added

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -20,6 +20,9 @@ loginservice.midInitUrl=/auth/mid/init
 loginservice.midPollUrl=/auth/mid/poll
 loginservice.midCancelUrl=/auth/mid/poll/cancel
 loginservice.idCardInitUrl=/auth/id
+loginservice.sidInitUrl=/auth/sid/init
+loginservice.sidPollUrl=/auth/sid/poll
+loginservice.sidCancelUrl=/auth/sid/poll/cancel
 loginservice.authAcceptUrl=/auth/accept
 loginservice.authRejectUrl=/auth/reject
 loginservice.errorUrl=/oidc-error
