TARA2-117 new Eidas test flow added

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -26,6 +26,9 @@ loginservice.sidCancelUrl=/auth/sid/poll/cancel
 loginservice.authAcceptUrl=/auth/accept
 loginservice.authRejectUrl=/auth/reject
 loginservice.errorUrl=/oidc-error
+# eidas endpoints
+loginservice.eidasInitUrl=/auth/eidas/init
+loginservice.eidasCallbackUrl=/auth/eidas/callback
 ## legal person
 loginservice.authLegalInitUrl=/auth/legalperson/init
 loginservice.authLegalPersonUrl=/auth/legalperson
