TARA2-117 Eidas related additional test config added

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -46,3 +46,15 @@ oidcclient.responseUrl=/oauth/response
 oidcclient.requestUrl=/oauth/request
 oidcclient.clientId=dev-mock-oidc-client
 oidcclient.secret=secret
+
+# Foreign CA Proxy Service configuration
+ca-proxyservice.protocol=https
+ca-proxyservice.host=eidas-caproxy
+ca-proxyservice.port=8080
+ca-proxyservice.consentUrl=/SpecificProxyService/AfterCitizenConsentResponse
+
+# Foreign IdP endpoint configuration
+idp.protocol=https
+idp.host=eidas-caproxy
+idp.port=8081
+idp.responseUrl=/IdP/Response
