TARA2-117 Eidas tests updated

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -58,3 +58,9 @@ idp.protocol=https
 idp.host=eidas-caproxy
 idp.port=8081
 idp.responseUrl=/IdP/Response
+
+# Domestic Eidas Connector Service configuration
+ee-connector.protocol=https
+ee-connector.host=eidas-specificconnector
+ee-connector.port=8443
+ee-connector.authenticationRequestUrl=/SpecificConnector/ServiceProvider
