MAINTENANCE cleanup of unnecessary property

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -29,7 +29,7 @@ loginservice.errorUrl=/oidc-error
 # eidas endpoints
 loginservice.eidasInitUrl=/auth/eidas/init
 loginservice.eidasCallbackUrl=/auth/eidas/callback
-## legal person
+# legal person endpoints
 loginservice.authLegalInitUrl=/auth/legalperson/init
 loginservice.authLegalPersonUrl=/auth/legalperson
 loginservice.authLegalConfirmUrl=/auth/legalperson/confirm
@@ -43,7 +43,6 @@ oidcclient.protocol=https
 oidcclient.host=oidc-client-mock
 oidcclient.port=8451
 oidcclient.responseUrl=/oauth/response
-oidcclient.requestUrl=/oauth/request
 oidcclient.clientId=dev-mock-oidc-client
 oidcclient.secret=secret
 
