TARA2-125 ID-Card endpoint authorization feature added into tests

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -37,6 +37,9 @@ loginservice.authLegalConfirmUrl=/auth/legalperson/confirm
 loginservice.consentUrl=/auth/consent
 loginservice.consentConfirmUrl=/auth/consent/confirm
 loginservice.heartbeatUrl=/heartbeat
+# Basic authentication, used in ID-Card tests
+loginservice.id.username=f5
+loginservice.id.password=changeme
 
 # OIDC mock parameters for tests (tests use OIDC mock values)
 oidcclient.protocol=https
