TARA2-135 New tara admin flow test added

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -60,3 +60,10 @@ idp.protocol=https
 idp.host=eidas-caproxy
 idp.port=8081
 idp.responseUrl=/IdP/Response
+
+# Tara admin service configuration
+adminservice.host=admin-service
+adminservice.port=8445
+adminservice.protocol=https
+adminservice.username=
+adminservice.password=
