--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
     </properties>
     <dependencies>
 
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>5.7.0</version>
+        </dependency>
         <!-- Groovy -->
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
