--- a/pom.xml
+++ b/pom.xml
@@ -7,22 +7,15 @@
     <groupId>ee.ria</groupId>
     <artifactId>tara-test</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <licenses>
-        <license>
-            <name>MIT</name>
-            <url>https://opensource.org/licenses/MIT</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+
 
     <properties>
         <!-- Configurable properties -->
 
         <!-- Dependency versions -->
-        <groovy.version>2.5.13</groovy.version>
-        <spock.version>1.3-groovy-2.5</spock.version>
-        <allure.version>2.13.5</allure.version>
-        <surefire-junit47.version>2.22.2</surefire-junit47.version>
+        <groovy.version>3.0.7</groovy.version>
+        <spock.version>2.0-groovy-3.0</spock.version>
+        <allure.version>2.13.8</allure.version>
         <opensaml.version>3.4.5</opensaml.version>
         <rest-assured.version>4.2.0</rest-assured.version>
         <commons-validator.version>1.7</commons-validator.version>
@@ -30,8 +23,8 @@
         <com.fasterxml.jackson.core.version>2.12.0</com.fasterxml.jackson.core.version>
         <!-- Plugin versions -->
 
-        <maven.surefire.plugin.version>3.0.0-M4</maven.surefire.plugin.version>
-        <gmavenplus.plugin.version>1.7.1</gmavenplus.plugin.version>
+        <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
+        <gmavenplus.plugin.version>1.12.1</gmavenplus.plugin.version>
         <build.helper.plugin.version>3.0.0</build.helper.plugin.version>
         <aspectj.version>1.9.6</aspectj.version>
         <allure-maven.version>2.10.0</allure-maven.version>
@@ -40,18 +33,27 @@
     </properties>
     <dependencies>
 
-        <dependency>
-            <groupId>org.junit.vintage</groupId>
-            <artifactId>junit-vintage-engine</artifactId>
-            <version>5.7.0</version>
-        </dependency>
         <!-- Groovy -->
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>${groovy.version}</version>
             <type>pom</type>
+            <exclusions>
+                <exclusion>
+                    <artifactId>junit</artifactId>
+                    <groupId>junit</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+        </dependency>
+
 
         <!-- Spock -->
         <dependency>
@@ -73,7 +75,7 @@
         <!-- Allure -->
         <dependency>
             <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-spock</artifactId>
+            <artifactId>allure-junit5</artifactId>
             <version>${allure.version}</version>
 
             <exclusions>
@@ -96,11 +98,6 @@
             <version>${rest-assured.version}</version>
         </dependency>
         <!-- Utils -->
-        <dependency>
-            <groupId>org.apache.maven.surefire</groupId>
-            <artifactId>surefire-junit47</artifactId>
-            <version>${surefire-junit47.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.opensaml</groupId>
@@ -158,6 +155,12 @@
                         <version>${groovy.version}</version>
                         <scope>runtime</scope>
                         <type>pom</type>
+                        <exclusions>
+                            <exclusion>
+                                <artifactId>junit</artifactId>
+                                <groupId>junit</groupId>
+                            </exclusion>
+                        </exclusions>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -204,7 +207,12 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
-
+                    <parallel>all</parallel>
+                    <perCoreThreadCount>false</perCoreThreadCount>
+                    <threadCount>6</threadCount>
+                    <threadCountSuites>6</threadCountSuites>
+                    <threadCountClasses>6</threadCountClasses>
+                    <threadCountMethods>6</threadCountMethods>
                     <includes>
                         <include>**/*.groovy</include>
                         <include>**/*.java</include>
@@ -215,7 +223,7 @@
                     <properties>
                         <property>
                             <name>listener</name>
-                            <value>io.qameta.allure.spock.AllureSpock</value>
+                            <value>io.qameta.allure.junit5.AllureJunit5</value>
                         </property>
                     </properties>
                     <systemProperties>
@@ -230,6 +238,16 @@
                         <groupId>org.aspectj</groupId>
                         <artifactId>aspectjweaver</artifactId>
                         <version>${aspectj.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-api</artifactId>
+                        <version>5.7.2</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>5.7.2</version>
                     </dependency>
                 </dependencies>
             </plugin>
