--- a/pom.xml
+++ b/pom.xml
@@ -13,22 +13,24 @@
         <!-- Configurable properties -->
 
         <!-- Dependency versions -->
-        <groovy.version>3.0.7</groovy.version>
-        <spock.version>2.0-groovy-3.0</spock.version>
-        <allure.version>2.13.8</allure.version>
-        <opensaml.version>3.4.5</opensaml.version>
-        <rest-assured.version>4.2.0</rest-assured.version>
+        <groovy.version>3.0.13</groovy.version>
+        <spock.version>2.2-groovy-3.0</spock.version>
+        <allure.version>2.15.0</allure.version>
+        <opensaml.version>4.0.1</opensaml.version>
+        <rest-assured.version>4.5.1</rest-assured.version>
         <commons-validator.version>1.7</commons-validator.version>
-        <nimbus-jose-jwt.version>9.1.3</nimbus-jose-jwt.version>
-        <com.fasterxml.jackson.core.version>2.12.6.1</com.fasterxml.jackson.core.version>
-        <!-- Plugin versions -->
+        <nimbus-jose-jwt.version>9.25</nimbus-jose-jwt.version>
+        <com.fasterxml.jackson.core.version>2.13.4</com.fasterxml.jackson.core.version>
+        <hamcrest.version>2.2</hamcrest.version>
+        <junite.jupiter.version>5.9.0</junite.jupiter.version>
 
-        <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
-        <gmavenplus.plugin.version>1.12.1</gmavenplus.plugin.version>
-        <build.helper.plugin.version>3.0.0</build.helper.plugin.version>
-        <aspectj.version>1.9.6</aspectj.version>
-        <allure-maven.version>2.10.0</allure-maven.version>
-        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
+        <!-- Plugin versions -->
+        <maven.surefire.plugin.version>3.0.0-M7</maven.surefire.plugin.version>
+        <gmavenplus.plugin.version>1.13.1</gmavenplus.plugin.version>
+        <build.helper.plugin.version>3.3.0</build.helper.plugin.version>
+        <aspectj.version>1.9.9.1</aspectj.version>
+        <allure-maven.version>2.11.2</allure-maven.version>
+        <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
@@ -51,7 +53,7 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
-            <version>2.2</version>
+            <version>${hamcrest.version}</version>
         </dependency>
 
 
@@ -236,12 +238,7 @@
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-api</artifactId>
-                        <version>5.7.2</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.7.2</version>
+                        <version>${junite.jupiter.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -249,6 +246,9 @@
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
                 <version>${allure-maven.version}</version>
+                <configuration>
+                    <reportVersion>${allure-maven.version}</reportVersion>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
