--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,8 @@
     <artifactId>tara-test</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <!-- Configurable properties -->
     <properties>
-        <!-- Configurable properties -->
-
         <!-- Dependency versions -->
         <groovy.version>3.0.13</groovy.version>
         <spock.version>2.2-groovy-3.0</spock.version>
@@ -23,6 +21,7 @@
         <com.fasterxml.jackson.core.version>2.13.4</com.fasterxml.jackson.core.version>
         <hamcrest.version>2.2</hamcrest.version>
         <junite.jupiter.version>5.9.0</junite.jupiter.version>
+        <json.version>20220924</json.version>
 
         <!-- Plugin versions -->
         <maven.surefire.plugin.version>3.0.0-M7</maven.surefire.plugin.version>
@@ -56,7 +55,6 @@
             <version>${hamcrest.version}</version>
         </dependency>
 
-
         <!-- Spock -->
         <dependency>
             <groupId>org.spockframework</groupId>
@@ -72,6 +70,13 @@
                     <artifactId>hamcrest-core</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <!-- JSON -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>${json.version}</version>
         </dependency>
 
         <!-- Allure -->
