--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -41,14 +41,6 @@ loginservice.heartbeatUrl=/heartbeat
 loginservice.id.username=f5
 loginservice.id.password=changeme
 
-# OIDC mock parameters for tests (tests use OIDC mock values)
-oidcclient.protocol=https
-oidcclient.host=oidc-client-mock
-oidcclient.port=8451
-oidcclient.responseUrl=/oauth/response
-oidcclient.clientId=dev-mock-oidc-client
-oidcclient.secret=secret
-
 # Foreign CA Proxy Service configuration
 ca-proxyservice.protocol=https
 ca-proxyservice.host=eidas-caproxy
@@ -67,3 +59,8 @@ adminservice.port=8445
 adminservice.protocol=https
 adminservice.username=
 adminservice.password=
+
+# Test configurations
+test.restAssured.consoleLogging=true
+test.isLocal=true
+test.adminSetupPath=src/test/resources/admin-setup
