AUT-2344 Add actuator health tests, update readme

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -36,7 +36,9 @@ loginservice.authLegalConfirmUrl=/auth/legalperson/confirm
 # consent endpoints
 loginservice.consentUrl=/auth/consent
 loginservice.consentConfirmUrl=/auth/consent/confirm
-loginservice.heartbeatUrl=/heartbeat
+loginservice.healthUrl=/actuator/health
+loginservice.healthReadinessUrl=/actuator/health/readiness
+loginservice.healthLivenessUrl=/actuator/health/liveness
 # Basic authentication, used in ID-Card tests
 loginservice.id.username=f5
 loginservice.id.password=changeme
