AUT-2340 Add 'actuator prometheus' endpoint

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -39,6 +39,7 @@ loginservice.consentConfirmUrl=/auth/consent/confirm
 loginservice.healthUrl=/actuator/health
 loginservice.healthReadinessUrl=/actuator/health/readiness
 loginservice.healthLivenessUrl=/actuator/health/liveness
+loginservice.prometheusUrl=/actuator/prometheus
 # Basic authentication, used in ID-Card tests
 loginservice.id.username=f5
 loginservice.id.password=changeme
