AUT-2408 Add actuator tests for OIDC, Inproxy and Tara Admin services

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -5,6 +5,10 @@ oidcservice.port=8443
 oidcservice.authenticationRequestUrl=/oauth2/auth
 oidcservice.configurationUrl=/.well-known/openid-configuration
 oidcservice.jwksUrl=/.well-known/jwks.json
+# oidcservice service configuration for specific node, used in actuator tests
+oidcservice.node.protocol=https
+oidcservice.node.host=oidc-service-backend
+oidcservice.node.port=8444
 
 # login service configuration
 loginservice.protocol=https
@@ -36,10 +40,6 @@ loginservice.authLegalConfirmUrl=/auth/legalperson/confirm
 # consent endpoints
 loginservice.consentUrl=/auth/consent
 loginservice.consentConfirmUrl=/auth/consent/confirm
-loginservice.healthUrl=/actuator/health
-loginservice.healthReadinessUrl=/actuator/health/readiness
-loginservice.healthLivenessUrl=/actuator/health/liveness
-loginservice.prometheusUrl=/actuator/prometheus
 # Basic authentication, used in ID-Card tests
 loginservice.id.username=f5
 loginservice.id.password=changeme
@@ -62,6 +62,11 @@ adminservice.port=8445
 adminservice.protocol=https
 adminservice.username=
 adminservice.password=
+
+# Inproxy Service configuration
+inproxyservice.protocol=https
+inproxyservice.host=inproxy-service
+inproxyservice.port=8444
 
 # Test configurations
 test.restAssured.consoleLogging=true
