AUT-2408 Refactor actuator tests

--- a/src/test/resources/sample_application.properties
+++ b/src/test/resources/sample_application.properties
@@ -5,10 +5,10 @@ oidcservice.port=8443
 oidcservice.authenticationRequestUrl=/oauth2/auth
 oidcservice.configurationUrl=/.well-known/openid-configuration
 oidcservice.jwksUrl=/.well-known/jwks.json
-# oidcservice service configuration for specific node, used in actuator tests
+# oidcservice service configuration for specific node
 oidcservice.node.protocol=https
 oidcservice.node.host=oidc-service-backend
-oidcservice.node.port=8444
+oidcservice.node.port=8443
 
 # login service configuration
 loginservice.protocol=https
@@ -67,6 +67,11 @@ adminservice.password=
 inproxyservice.protocol=https
 inproxyservice.host=inproxy-service
 inproxyservice.port=8444
+
+# Demo client configuration
+democlient.protocol=https
+democlient.host=client
+democlient.port=31443
 
 # Test configurations
 test.restAssured.consoleLogging=true
